fazendo commit na branch

--- a/projeto2.ipynb
+++ b/projeto2.ipynb
@@ -1,27 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "projeto2.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyNnGQkYX5yQpLER890zgIfr",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/rodrigofrbueno/projeto2/blob/main/projeto2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -38,14 +21,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "id": "Kq60sW5mGw1p"
       },
+      "outputs": [],
       "source": [
         "import pandas as pd"
-      ],
-      "execution_count": 1,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -58,14 +41,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
         "id": "lirfYUy-KulM"
       },
+      "outputs": [],
       "source": [
         "url = \"https://raw.githubusercontent.com/rodrigofrbueno/projeto2/main/dados/ExercicioAula.csv\""
-      ],
-      "execution_count": 8,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -78,17 +61,25 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
         "id": "vGEPouIgPn9Y"
       },
+      "outputs": [],
       "source": [
         "df=pd.read_csv(url, sep=\";\")"
-      ],
-      "execution_count": 9,
-      "outputs": []
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "teste"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -97,13 +88,8 @@
         "id": "mIpp7-RcPxr5",
         "outputId": "0bb94e47-75f6-4827-a296-0f0fe3e5a3e4"
       },
-      "source": [
-        "df"
-      ],
-      "execution_count": 14,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -326,9 +312,13 @@
               "[1600 rows x 12 columns]"
             ]
           },
+          "execution_count": 14,
           "metadata": {},
-          "execution_count": 14
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df"
       ]
     },
     {
@@ -336,9 +326,24 @@
       "metadata": {
         "id": "M33S6oo1VwFg"
       },
-      "source": [
-        ""
-      ]
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyNnGQkYX5yQpLER890zgIfr",
+      "include_colab_link": true,
+      "name": "projeto2.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
